rename function norm() to compute_norm() for docs

--- a/notebooks/bagpipeline.ipynb
+++ b/notebooks/bagpipeline.ipynb
@@ -457,7 +457,7 @@
     "difference_landscape = LD._subtract_landscapes(pl1, pl2)\n",
     "utils.plot_landscape(difference_landscape)\n",
     "# Compute the norm\n",
-    "distance = sum(LD.norm(difference_landscape.functions[dim]) for dim in [0,1])\n",
+    "distance = sum(LD.compute_norm(difference_landscape.functions[dim]) for dim in [0,1])\n",
     "print(f\"The distance between the two persistence landscapes is: {distance:.3f}\")"
    ]
   },
